--- a/filling_schedule_optimizer/reports/schedule_report.html
+++ b/filling_schedule_optimizer/reports/schedule_report.html
@@ -13,10 +13,10 @@
 	</head>
 	<body>
 		<h1>Filling Line Schedule Report</h1>
-		<h2>Summary Metrics</h2>
+		<h2>Summary KPIs</h2>
 		<table>
-			<tr><th>Total Time (min)</th><th>Total Changeover Time (min)</th><th>Total Reclean Time (min)</th><th>Total Fill Time (min)</th></tr>
-			<tr><td>29109.76</td><td>3600</td><td>4320</td><td>21189.76</td></tr>
+			<tr><th>Total Schedule Time (hours)</th><th>Total Changeover Time (hours)</th><th>Total Reclean Time (hours)</th><th>Total Filling Time (hours)</th></tr>
+			<tr><td>509.16</td><td>84.0</td><td>72.0</td><td>353.16</td></tr>
 		</table>
 		<h2>Detailed Schedule</h2>
 		<table>
@@ -26,7 +26,7 @@
 				<th>Lot Type</th>
 				<th>Start Time</th>
 				<th>End Time</th>
-				<th>Duration (min)</th>
+				<th>Duration (hours)</th>
 				<th>Notes</th>
 			</tr>
 	
@@ -34,9 +34,9 @@
 				<td>reclean</td>
 				<td></td>
 				<td></td>
-				<td>2025-08-29 08:17</td>
-				<td>2025-08-30 08:17</td>
-				<td>1440</td>
+				<td>2025-08-29 08:27</td>
+				<td>2025-08-30 08:27</td>
+				<td>24.0</td>
 				<td>Line reclean</td>
 			</tr>
 		
@@ -44,219 +44,19 @@
 				<td>fill</td>
 				<td>C6</td>
 				<td>VialH</td>
-				<td>2025-08-30 08:17</td>
-				<td>2025-08-30 08:47</td>
-				<td>30.12</td>
+				<td>2025-08-30 08:27</td>
+				<td>2025-08-30 08:57</td>
+				<td>0.5</td>
 				<td>Filling lot C6</td>
 			</tr>
 		
 			<tr>
 				<td>changeover</td>
 				<td></td>
-				<td>VialH</td>
-				<td>2025-08-30 08:47</td>
-				<td>2025-08-30 12:47</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>C3</td>
-				<td>VialH</td>
-				<td>2025-08-30 12:47</td>
-				<td>2025-08-30 15:18</td>
-				<td>150.6</td>
-				<td>Filling lot C3</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-08-30 15:18</td>
-				<td>2025-08-30 19:18</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>C2</td>
-				<td>VialH</td>
-				<td>2025-08-30 19:18</td>
-				<td>2025-08-31 00:19</td>
-				<td>301.2</td>
-				<td>Filling lot C2</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-08-31 00:19</td>
-				<td>2025-08-31 04:19</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>B2</td>
-				<td>VialH</td>
-				<td>2025-08-31 04:19</td>
-				<td>2025-09-01 05:25</td>
-				<td>1506.02</td>
-				<td>Filling lot B2</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-09-01 05:25</td>
-				<td>2025-09-01 09:25</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>C5</td>
-				<td>VialH</td>
-				<td>2025-09-01 09:25</td>
-				<td>2025-09-02 16:48</td>
-				<td>1882.53</td>
-				<td>Filling lot C5</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-09-02 16:48</td>
-				<td>2025-09-02 20:48</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>B1</td>
-				<td>VialH</td>
-				<td>2025-09-02 20:48</td>
-				<td>2025-09-04 07:56</td>
-				<td>2108.43</td>
-				<td>Filling lot B1</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-09-04 07:56</td>
-				<td>2025-09-04 11:56</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>A3</td>
-				<td>VialH</td>
-				<td>2025-09-04 11:56</td>
-				<td>2025-09-06 01:35</td>
-				<td>2259.04</td>
-				<td>Filling lot A3</td>
-			</tr>
-		
-			<tr>
-				<td>reclean</td>
-				<td></td>
-				<td></td>
-				<td>2025-09-06 01:35</td>
-				<td>2025-09-07 01:35</td>
-				<td>1440</td>
-				<td>Line reclean</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-09-07 01:35</td>
-				<td>2025-09-07 05:35</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>B3</td>
-				<td>VialH</td>
-				<td>2025-09-07 05:35</td>
-				<td>2025-09-08 21:45</td>
-				<td>2409.64</td>
-				<td>Filling lot B3</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-09-08 21:45</td>
-				<td>2025-09-09 01:45</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>A2</td>
-				<td>VialH</td>
-				<td>2025-09-09 01:45</td>
-				<td>2025-09-10 22:56</td>
-				<td>2710.84</td>
-				<td>Filling lot A2</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
-				<td>VialH</td>
-				<td>2025-09-10 22:56</td>
-				<td>2025-09-11 02:56</td>
-				<td>240</td>
-				<td>Changeover to VialH</td>
-			</tr>
-		
-			<tr>
-				<td>fill</td>
-				<td>A4</td>
-				<td>VialH</td>
-				<td>2025-09-11 02:56</td>
-				<td>2025-09-13 05:08</td>
-				<td>3012.05</td>
-				<td>Filling lot A4</td>
-			</tr>
-		
-			<tr>
-				<td>reclean</td>
-				<td></td>
-				<td></td>
-				<td>2025-09-13 05:08</td>
-				<td>2025-09-14 05:08</td>
-				<td>1440</td>
-				<td>Line reclean</td>
-			</tr>
-		
-			<tr>
-				<td>changeover</td>
-				<td></td>
 				<td>VialE</td>
-				<td>2025-09-14 05:08</td>
-				<td>2025-09-14 13:08</td>
-				<td>480</td>
+				<td>2025-08-30 08:57</td>
+				<td>2025-08-30 16:57</td>
+				<td>8.0</td>
 				<td>Changeover to VialE</td>
 			</tr>
 		
@@ -264,9 +64,9 @@
 				<td>fill</td>
 				<td>C1</td>
 				<td>VialE</td>
-				<td>2025-09-14 13:08</td>
-				<td>2025-09-14 14:08</td>
-				<td>60.24</td>
+				<td>2025-08-30 16:57</td>
+				<td>2025-08-30 17:57</td>
+				<td>1.0</td>
 				<td>Filling lot C1</td>
 			</tr>
 		
@@ -274,9 +74,9 @@
 				<td>changeover</td>
 				<td></td>
 				<td>VialE</td>
-				<td>2025-09-14 14:08</td>
-				<td>2025-09-14 18:08</td>
-				<td>240</td>
+				<td>2025-08-30 17:57</td>
+				<td>2025-08-30 21:57</td>
+				<td>4.0</td>
 				<td>Changeover to VialE</td>
 			</tr>
 		
@@ -284,19 +84,39 @@
 				<td>fill</td>
 				<td>A5</td>
 				<td>VialE</td>
-				<td>2025-09-14 18:08</td>
-				<td>2025-09-14 19:38</td>
-				<td>90.36</td>
+				<td>2025-08-30 21:57</td>
+				<td>2025-08-30 23:27</td>
+				<td>1.51</td>
 				<td>Filling lot A5</td>
 			</tr>
 		
 			<tr>
 				<td>changeover</td>
 				<td></td>
+				<td>VialH</td>
+				<td>2025-08-30 23:27</td>
+				<td>2025-08-31 07:27</td>
+				<td>8.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>C3</td>
+				<td>VialH</td>
+				<td>2025-08-31 07:27</td>
+				<td>2025-08-31 09:58</td>
+				<td>2.51</td>
+				<td>Filling lot C3</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
 				<td>VialE</td>
-				<td>2025-09-14 19:38</td>
-				<td>2025-09-14 23:38</td>
-				<td>240</td>
+				<td>2025-08-31 09:58</td>
+				<td>2025-08-31 17:58</td>
+				<td>8.0</td>
 				<td>Changeover to VialE</td>
 			</tr>
 		
@@ -304,19 +124,39 @@
 				<td>fill</td>
 				<td>A1</td>
 				<td>VialE</td>
-				<td>2025-09-14 23:38</td>
-				<td>2025-09-15 04:39</td>
-				<td>301.2</td>
+				<td>2025-08-31 17:58</td>
+				<td>2025-08-31 22:59</td>
+				<td>5.02</td>
 				<td>Filling lot A1</td>
 			</tr>
 		
 			<tr>
 				<td>changeover</td>
 				<td></td>
+				<td>VialH</td>
+				<td>2025-08-31 22:59</td>
+				<td>2025-09-01 06:59</td>
+				<td>8.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>C2</td>
+				<td>VialH</td>
+				<td>2025-09-01 06:59</td>
+				<td>2025-09-01 12:00</td>
+				<td>5.02</td>
+				<td>Filling lot C2</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
 				<td>VialE</td>
-				<td>2025-09-15 04:39</td>
-				<td>2025-09-15 08:39</td>
-				<td>240</td>
+				<td>2025-09-01 12:00</td>
+				<td>2025-09-01 20:00</td>
+				<td>8.0</td>
 				<td>Changeover to VialE</td>
 			</tr>
 		
@@ -324,19 +164,179 @@
 				<td>fill</td>
 				<td>C7</td>
 				<td>VialE</td>
-				<td>2025-09-15 08:39</td>
-				<td>2025-09-15 21:12</td>
-				<td>753.01</td>
+				<td>2025-09-01 20:00</td>
+				<td>2025-09-02 08:33</td>
+				<td>12.55</td>
 				<td>Filling lot C7</td>
 			</tr>
 		
 			<tr>
 				<td>changeover</td>
 				<td></td>
+				<td>VialH</td>
+				<td>2025-09-02 08:33</td>
+				<td>2025-09-02 16:33</td>
+				<td>8.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>B2</td>
+				<td>VialH</td>
+				<td>2025-09-02 16:33</td>
+				<td>2025-09-03 17:39</td>
+				<td>25.1</td>
+				<td>Filling lot B2</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
+				<td>VialH</td>
+				<td>2025-09-03 17:39</td>
+				<td>2025-09-03 21:39</td>
+				<td>4.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>C5</td>
+				<td>VialH</td>
+				<td>2025-09-03 21:39</td>
+				<td>2025-09-05 05:02</td>
+				<td>31.38</td>
+				<td>Filling lot C5</td>
+			</tr>
+		
+			<tr>
+				<td>reclean</td>
+				<td></td>
+				<td></td>
+				<td>2025-09-05 05:02</td>
+				<td>2025-09-06 05:02</td>
+				<td>24.0</td>
+				<td>Line reclean</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
+				<td>VialH</td>
+				<td>2025-09-06 05:02</td>
+				<td>2025-09-06 09:02</td>
+				<td>4.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>B1</td>
+				<td>VialH</td>
+				<td>2025-09-06 09:02</td>
+				<td>2025-09-07 20:10</td>
+				<td>35.14</td>
+				<td>Filling lot B1</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
+				<td>VialH</td>
+				<td>2025-09-07 20:10</td>
+				<td>2025-09-08 00:10</td>
+				<td>4.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>A3</td>
+				<td>VialH</td>
+				<td>2025-09-08 00:10</td>
+				<td>2025-09-09 13:49</td>
+				<td>37.65</td>
+				<td>Filling lot A3</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
+				<td>VialH</td>
+				<td>2025-09-09 13:49</td>
+				<td>2025-09-09 17:49</td>
+				<td>4.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>B3</td>
+				<td>VialH</td>
+				<td>2025-09-09 17:49</td>
+				<td>2025-09-11 09:59</td>
+				<td>40.16</td>
+				<td>Filling lot B3</td>
+			</tr>
+		
+			<tr>
+				<td>reclean</td>
+				<td></td>
+				<td></td>
+				<td>2025-09-11 09:59</td>
+				<td>2025-09-12 09:59</td>
+				<td>24.0</td>
+				<td>Line reclean</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
+				<td>VialH</td>
+				<td>2025-09-12 09:59</td>
+				<td>2025-09-12 13:59</td>
+				<td>4.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>A2</td>
+				<td>VialH</td>
+				<td>2025-09-12 13:59</td>
+				<td>2025-09-14 11:10</td>
+				<td>45.18</td>
+				<td>Filling lot A2</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
+				<td>VialH</td>
+				<td>2025-09-14 11:10</td>
+				<td>2025-09-14 15:10</td>
+				<td>4.0</td>
+				<td>Changeover to VialH</td>
+			</tr>
+		
+			<tr>
+				<td>fill</td>
+				<td>A4</td>
+				<td>VialH</td>
+				<td>2025-09-14 15:10</td>
+				<td>2025-09-16 17:22</td>
+				<td>50.2</td>
+				<td>Filling lot A4</td>
+			</tr>
+		
+			<tr>
+				<td>changeover</td>
+				<td></td>
 				<td>VialE</td>
-				<td>2025-09-15 21:12</td>
-				<td>2025-09-16 01:12</td>
-				<td>240</td>
+				<td>2025-09-16 17:22</td>
+				<td>2025-09-17 01:22</td>
+				<td>8.0</td>
 				<td>Changeover to VialE</td>
 			</tr>
 		
@@ -344,9 +344,9 @@
 				<td>fill</td>
 				<td>C4</td>
 				<td>VialE</td>
-				<td>2025-09-16 01:12</td>
-				<td>2025-09-18 13:27</td>
-				<td>3614.46</td>
+				<td>2025-09-17 01:22</td>
+				<td>2025-09-19 13:36</td>
+				<td>60.24</td>
 				<td>Filling lot C4</td>
 			</tr>
 		
